@@ -1,7 +1,7 @@
 		</div><!-- end #container -->
 		<!-- various neat badges, etc? -->
 		<div id="footer" class="sg-35 sgParent borderLeft borderRight">
-			<a href="license.txt" title="licensed under the MIT-ZERO License" rel="license"><img src="images/mit-zero.png" alt="MIT-ZERO License" /></a>
+			<a href="LICENSE" title="licensed under the MIT-ZERO License" rel="license"><img src="images/mit-zero.png" alt="MIT-ZERO License" /></a>
 			<a href="https://github.com/kfredrichardson/bkmrk" title="bkmrk's github repository"><img src="images/github.png" alt="github repository" /></a>
 			<a href="http://thesquaregrid.com/" title="powered by squaregrid css framework"><img src="images/thesquaregrid.png" alt="powered by The Square Grid CSS framework" /></a>
 		</div>
