@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head profile="http://gmpg.org/xfn/11">
 	<meta http-equiv="content-language" content="en" />
@@ -13,15 +13,24 @@
 	<link rel="alternate" type="application/rss+xml" title="latest bkmrks (RSS 2.0)" href="bkmrk.php?get&rss" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="apple-touch-icon" href="images/apple-logo.png"/>
-
 </head>
 
 <body>
 
-	<div id="wrapper"><!-- you need both the wrapper and container -->
+	<div id="wrapper">
 		<div id="container">
 			
 				<div id="title" class="sg-35 borderLeft borderRight"><a href="bkmrk.php" title="Bkmrk">Bkmrk</a> <a href="bkmrk.php?get&rss" title="RSS feed"><img src="images/rss-valid.png" alt="RSS feed" align="right" /></a></div>
 				<div id="navigation" class="borderLeft borderRight">
-				Separate tags with commas.  <a href="javascript:(function(){ window.open('http://playground.triageworks.net/bkmrk/bkmrk.php?post&uri='+encodeURIComponent(window.location.href)+'&title='+encodeURIComponent(document.title)+'&desc='+encodeURIComponent(''+(window.getSelection?window.getSelection():document.getSelection?document.getSelection():document.selection.createRange().text)), '_blank', 'height=400,width=500')})();" title="bookmarklet">bookmarklet</a>
+				<form name="searchform" action="bkmrk.php" method="get">
+					<table>
+						<tr><td><h3>Search bkmrks:</h3></td></tr>
+						<tr><td>Tags:</td><td><input type="text" name="tags" value="#TAGS#" placeholder="separate with commas" /></td></tr>
+						<input type="hidden" name="get" />
+						<tr><td>Num results:</td><td> <input type="number" id="numbox" name="num" min="1" max="100" value="#NUM#" step="5" /></td><tr>
+						<tr><td>Result type:</td><td><input type="submit" value="regular" /><input type="submit" value="rss" name="rss" /></td></tr>
+					</table>
+				</form>
+
+				<a href="javascript:(function(){ window.open('http://playground.triageworks.net/bkmrk/bkmrk.php?post&uri='+encodeURIComponent(window.location.href)+'&title='+encodeURIComponent(document.title)+'&desc='+encodeURIComponent(''+(window.getSelection?window.getSelection():document.getSelection?document.getSelection():document.selection.createRange().text)), '_blank', 'height=400,width=500')})();" title="bookmarklet">bookmarklet</a>
 				</div>
