@@ -6,7 +6,7 @@
 							<tr><td><label for="uri">Uri:</label></td><td><input type="url" name="uri" value="#URI#" size="50" /></td></tr>
 							<tr><td><label for="title">Title:</label></td><td><input type="text" name="title" value="#TITLE#" size="50" /></td></tr>
 							<tr><td><label for="desc">Description:</label></td><td><input name="desc" value="#DESC#" size="50" /></td></tr>
-							<tr><td><label for="tags">Tags:</label></td><td><input type="text" name="tags" value="#TAGS#" size="50" /></td></tr>
+							<tr><td><label for="tags">Tags:</label></td><td><input type="text" name="tags" value="#TAGS#" size="50" placeholder="separate tags with commas" /></td></tr>
 							<input type="hidden" name="id" value="#ID#" />
 							<tr><td></td><td><input type="submit" name="post" value="post link" /></td></tr>
 						</form>
