@@ -1,3 +1,7 @@
+5-Feb-2011
+==========
+Added form to html header to allow for easier selection of tags to search and number of results.
+Small style changes.
 28-Dec-2010
 ===========
 Initial commit to GitHub.
